src/test-c/test_fail/error/undefined_func.c
int main(){
    toto();
    return 0;
}